# tic-tac-toe

./: README.md  TASK.md  game.py  main.py  models.py  pyproject.toml  test_game_logic.py  test_main.py  variables.py
templates/: index.html  test_game_logic.py
