[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Evgeny Chernyshov <evgeny.chernyshov@hkeeper.global>"]
readme = "README.md"
#packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
numpy = "^1.25.2"
httpx = "^0.24.1"
pytest = "^7.4.0"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
